# barretenberg-sys

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cspell.json  flake.nix
.cargo/: config.toml
.github/workflows/: publish.yml  release.yml  rust.yml  test.yml
src/: bindings.rs  blake2s.rs  composer.rs  lib.rs  main.rs  pedersen.rs  recursion.rs
