[package]
name = "barretenberg-sys"
version = "0.1.0"
description = "FFI bindings to Barretenberg"
authors = ["The Noir Team <team@noir-lang.org>"]
repository = "https://github.com/noir-lang/barretenberg-sys/"
edition = "2021"
rust-version = "1.66"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "barretenberg"

[dependencies]
link-cplusplus = "1.0.8"

[dev-dependencies]
hex = "0.4.2"

[build-dependencies]
bindgen = "0.64.0"
color-eyre = "0.6.2"
pkg-config = "0.3.26"
thiserror = "1.0.21"
cc = "1.0.79"
